# Hackathon-II-what-to-dou

./: CHATKIT_STREAMING_CONTEXT.md  CHATKIT_UI_BLANK_ANALYSIS.md  CLAUDE.md  CROSS_FILE_ALIGNMENT_REPORT.md  README.md  SPEC_CODE_ALIGNMENT_ANALYSIS.md
.claude/: settings.local.json
.spec-kit/: config.yaml
backend/: .gitignore  CLAUDE.md  main.py  pyproject.toml  verify_implementation.py
backend/database/: db.py  init_db.py
backend/middleware/: jwt_middleware.py
backend/routes/: tasks.py
backend/schema/: models.py
backend/services/: task_service.py
backend/src/: main.py
backend/src/api/: chat.py  tasks.py
backend/src/configs/: gemini_config.py  groq_config.py
backend/src/database/: db.py  init_db.py
backend/src/middleware/: auth_handler.py
backend/src/my_mcp_server/: server.py
backend/src/my_mcp_server/tools/: task_complete_tool.py  task_create_tool.py  task_delete_tool.py  task_list_tool.py  task_update_tool.py
backend/src/schema/: chat_models.py  models.py
backend/src/services/: chat_service.py  conversation_service.py  task_service.py
backend/tests/: TESTING.md  chatbot-mcp-handshake-test.py  debug_mcp.py  debug_mcp_integration.py  simple_mcp_test.py  test_agent_functionality.py  test_agent_mcp_integration.py  test_agent_verification.py  test_auth_flow.py  test_backend.py  test_chat_endpoint.py  test_chatbot_mcp_integration.py  test_developer_integration.py  test_jwt_generator.py  test_mcp_bridge.py  test_mcp_integration.py  test_mcp_security.py  test_natural_language_task_creation.py
frontend/: CLAUDE.md  jest.config.js  package.json  (+1 more)
(+496 files in other folders)
